[gd_scene load_steps=16 format=3 uid="uid://cuqp3vdnbus2n"]

[ext_resource type="PackedScene" uid="uid://dcbvpreahnt2f" path="res://Scenes/Player/player.tscn" id="1_ebmjs"]
[ext_resource type="Script" uid="uid://83ansfhhkj23" path="res://Scenes/Game/game.gd" id="1_wowpa"]
[ext_resource type="Script" uid="uid://cb05i3ko56emi" path="res://Scenes/star_background.gd" id="2_ldgsr"]
[ext_resource type="Script" uid="uid://hwswi5bhrqxx" path="res://Scenes/Camera/subpixelcamera.gd" id="2_qxrlw"]
[ext_resource type="Script" uid="uid://iupmyhogtxop" path="res://Scenes/Managers/enemy_spawner.gd" id="4_3dryh"]
[ext_resource type="Texture2D" uid="uid://clkhcvgqdw4ln" path="res://Assets/square.png" id="4_8e3kh"]
[ext_resource type="Shader" uid="uid://drbdbpesc4eaw" path="res://Shaders/stars_1.gdshader" id="4_56qi8"]
[ext_resource type="Script" uid="uid://iwtk8qqhqf41" path="res://Scenes/Bodies/PlanetSpawner.gd" id="4_wowpa"]
[ext_resource type="PackedScene" uid="uid://b48kj3f1ysx00" path="res://Scenes/Satellite/satellite_3.tscn" id="6_h4fw4"]
[ext_resource type="PackedScene" uid="uid://cu2xh3q6htkyi" path="res://Scenes/Satellite/satellite_2.tscn" id="6_i6g32"]
[ext_resource type="PackedScene" uid="uid://cqpdodt668rju" path="res://Scenes/Satellite/satellite_4.tscn" id="7_o5yvi"]
[ext_resource type="PackedScene" uid="uid://cbwgac5vnc7eu" path="res://Scenes/Satellite/satellite_5.tscn" id="7_rku1e"]
[ext_resource type="PackedScene" uid="uid://dvdupc2fvp8lg" path="res://Scenes/Satellite/satellite_1.tscn" id="7_v158k"]
[ext_resource type="Resource" uid="uid://c1algbfbjgo5w" path="res://Data/dialogue_wanne_be_rebellion_leader.tres" id="8_h4fw4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2vowc"]
render_priority = 1
shader = ExtResource("4_56qi8")
shader_parameter/background_color = Color(0.02, 0.04, 0.12, 1)
shader_parameter/aspect_ratio = 1.0
shader_parameter/density = 1.3
shader_parameter/layer_parascale = 4
shader_parameter/star_speed = Vector2(0, 0)
shader_parameter/star_wave = Vector2(0, 0)
shader_parameter/star_size = 3.0
shader_parameter/star_rotate_speed = 0.5
shader_parameter/twinkle_effect = 0.6
shader_parameter/twinkle_speed = 0.3
shader_parameter/pixelate_enabled = false
shader_parameter/pixelate_count = 1000.0

[node name="Game" type="Node2D"]
script = ExtResource("1_wowpa")

[node name="Environment" type="Node2D" parent="."]

[node name="Bodies" type="Node2D" parent="Environment"]

[node name="StarBackground" type="Node2D" parent="Environment" node_paths=PackedStringArray("trackObject")]
scale = Vector2(2, 2)
script = ExtResource("2_ldgsr")
star_colors = Array[Color]([Color(0.26666668, 0.25490198, 0.34901962, 1), Color(0.28235295, 0.27058825, 0.36862746, 1), Color(1, 0.9019608, 0.7019608, 0.39215687), Color(0.40392157, 0.39215687, 0.45882353, 1)])
trackObject = NodePath("../../PlayerContainer/Player")
stars_per_layer = 1000
spawn_radius = 10000.0

[node name="Systems" type="Node2D" parent="."]

[node name="Other" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
script = ExtResource("2_qxrlw")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D"]
visible = false
material = SubResource("ShaderMaterial_2vowc")
position = Vector2(218, -20.500061)
scale = Vector2(149, 80.65625)
texture = ExtResource("4_8e3kh")

[node name="EnemySpawner" type="Node2D" parent="." groups=["EnemySpawner"]]
script = ExtResource("4_3dryh")

[node name="PlanetSpawner" type="Node2D" parent="."]
script = ExtResource("4_wowpa")

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="Player" parent="PlayerContainer" instance=ExtResource("1_ebmjs")]

[node name="Enemies" type="Node2D" parent="."]

[node name="Satellite_5" parent="." instance=ExtResource("7_rku1e")]
position = Vector2(-1030, -1230)

[node name="Satellite_4" parent="." instance=ExtResource("7_o5yvi")]
position = Vector2(1495, 1765)

[node name="Satellite_3" parent="." instance=ExtResource("6_h4fw4")]
position = Vector2(-1243, 1677)

[node name="Satellite_1" parent="." instance=ExtResource("6_i6g32")]
position = Vector2(172, 9)

[node name="Satellite_2" parent="." instance=ExtResource("7_v158k")]
position = Vector2(3037, 481)
dialogue_data = ExtResource("8_h4fw4")

[node name="Fleet" type="Node2D" parent="."]
